using StarterAssets;
using Unity.VisualScripting;
using UnityEngine;
using UnityEngine.AI;
using System.Collections;
using UnityEngine.UIElements;
using UnityEngine.Rendering;


public class EnemyMovement : MonoBehaviour
{
    // Start is called once before the first execution of Update after the MonoBehaviour is created
    public Animator EnemyAnimator;
    public SoundController SoundController;
    public GameObject Player;
    
    public Vector3 SearchPoint;
    //public Transform SearchPoint;
    public NavMeshAgent NavMeshAgent;
    public EGA_EnemyLasers EGA_EnemyLasers;
    public GameObject Prefab;
    public AudioSource ShootSound;
    public float _moveTime;      // врем€ после выстрела до начала движени€
    public float _searchTime;    // врем€ до смены направлени€
    public float _shootTime;     // врем€ прицеливани€
    public float _enemyChange;   // врем€ до рандомного изменени€ характеристик игрока
    

    private GameObject Instance;
    public EGA_Laser LaserScript;

    [Header("StateMashine")]
    public Transform Enemy;
    public enum StateMashine
    {
        Stop,
        Move,        
        MovetoSide,
        Search,
        Rotate,
        Shoot,
        Reload,
        Damage,
        Dead
    };


    [Header("Move")]
    public float _enemySpeed = 2f;  // Cкорость врага
    public float _enemyRotationSpeed = 2.0f; // —корость поворота врага
    public float _stopDistans; // минимальное рассто€ние до игрока
    public bool _isMove;
    public bool _isMoveToTheSide;
    public bool _isRotate;
    public bool _isRotate_L;
    public bool _isRotate_R;
    public bool _isShoot;
    public bool _isReloading;
    public bool _isDamage;
    public bool _isDead;
    public Vector3 _rotateDirection;
    public Quaternion targetRotation;
    public Vector3 MoveToTheSidePoint;
    public GameObject Point;
    public float _timerMoveToTheSide;
    
    //private GameObject Instance;

    [Header("Search")]
    public float _timer;
    //public Transform SearchPoint;
    //public Transform SearchDirection;
    public Vector3 _direction;
    public Quaternion Direction;
    public Plane PlaneDirection;
    public Plane goalLine1;

    [Header("Fire")]
    public Transform FirePoint;
    public Transform RiflePoint;
    public float _fireDistans;
    public float _distance;  // рассто€ние до игрока
    public AnimationCurve _maxBulletSpread;
    public float _bulletSpread;
    public Vector3 _spreadVector;
    public Vector3 _rifleDirection; 
    public Vector3 _targetDirection;
    public Quaternion _shootDerection;

    [Header("Weapon")]
    public int _ammo = 3;
    public int _maxAmmo = 5;

    void Start()
    {   // ќ игроке узнаем из системы спавна
        //Player = GameObject.FindGameObjectWithTag("Player").transform;
        //NavMeshAgent.speed = _enemySpeed;
        //NavMeshAgent.stoppingDistance = _stopDistans;
        _isMove = true;
        _isMoveToTheSide = false;
        _isDead = false;
        _isReloading = false;
        _timer = 0f;

        Player = GameObject.Find("Player");
        EGA_EnemyLasers = GetComponent<EGA_EnemyLasers>();
        EnemyAnimator = GetComponentInChildren<Animator>();
        SoundController = GetComponentInChildren<SoundController>();
        
        //_enemyChange = 15f;  // врем€ до смены характеристик врага        
        //_fireDistans = 30f;  //максимальна€ дистанци€ стрельбы
        _ammo = Random.Range(1, _maxAmmo);
        EnemyChange();
        NavMeshAgent.speed = _enemySpeed;
        EnemyAnimator.SetFloat("y", 1f);
        EnemyAnimator.SetFloat("x", 0f);
    }

    public void EnemyChange()
    {
        _moveTime = Random.Range(0.5f, 1f);    // врем€ через которое враг начинает движение
        _searchTime = Random.Range(0.5f, 1f);  // врем€ через которое враг обновл€ет позицию игрока и начинает визуальный поиск
        _shootTime = Random.Range(1.5f, 2.5f);    // врем€ через которое враг стрел€ет по игроку
        _enemySpeed = Random.Range(2f, 4f);
        _enemyRotationSpeed = Random.Range(2f, 3f);
        _stopDistans = Random.Range(3f, 5f);
        //NavMeshAgent.speed = _enemySpeed;
        NavMeshAgent.stoppingDistance = _stopDistans;
        // –азброс стрельбы должен быть от 0,5 до 1,5
        //_bulletSpread = 2f / ((_shootTime + 1f) * (_shootTime + 1f));  //разлЄт пуль
        _bulletSpread = _maxBulletSpread.Evaluate(_shootTime / 3f);
        _enemyChange = Random.Range(10f, 15f);  // врем€ до смены характеристик врага        
        _fireDistans = Random.Range(25f, 35f);  //максимальна€ дистанци€ стрельбы
    }

    // Update is called once per frame
    void Update()
    {        

        Debug.DrawRay(SearchPoint + Enemy.transform.right * 0.5f, Enemy.transform.right * 5, Color.green);
        Debug.DrawRay(SearchPoint + Enemy.transform.right * -0.5f, Enemy.transform.right * -5, Color.green);

        _timer = _timer + Time.deltaTime;

        if (_isReloading)
        {
            Stop();
        }

        if (!_isDead && !_isDamage)
        {
            //_timer = _timer + Time.deltaTime;
            if ((_timer > _searchTime) && _isMove && !_isMoveToTheSide)
            {
                NavMeshAgent.SetDestination(Player.transform.position);
                Search();
            }

            if (_isShoot)
            {
                SearchPoint = Enemy.transform.position + new Vector3(0f, 1.6f, 0f);
                //Debug.DrawRay(SearchPoint, _direction * 10, Color.red);
                Debug.DrawRay(SearchPoint, _targetDirection * _fireDistans, Color.red);
            }

            if (_isRotate)
            {
                Rotate();
                //Enemy.transform.rotation = Quaternion.Slerp(transform.rotation, targetRotation, Time.deltaTime * rotationSpeed);
            }


            SearchPoint = Enemy.transform.position + new Vector3(0f, 1.6f, 0f);
            Debug.DrawRay(SearchPoint, Enemy.transform.forward * 5, Color.green);
            Debug.DrawRay(SearchPoint, _direction * 5, Color.yellow);
            //NavMeshAgent.SetDestination(Player.position);
            //Debug.DrawRay(Enemy.transform.position, Enemy.transform.forward * 30, Color.yellow);
            //Debug.DrawRay(Enemy.transform.position, direction * 30, Color.green);

            if (_isShoot | _isMove | _isRotate | _isReloading | _isMoveToTheSide)                
            {
                if (_isDamage)
                {
                    _isMove = false;
                    _isMoveToTheSide = false;
                    _isRotate = false;
                    _isShoot = false;
                    _isReloading = false;
                    Stop();
                }
            }
        }

        if (_isMoveToTheSide)  // выполн€етс€ маневр уклонени€ вбок
        {
            MoveToTheSide();
        }

    }

    public void Search()
    {
        //бросаем поисковый луч
        _direction = Player.transform.position - Enemy.transform.position;
        _distance = _direction.magnitude;
        //Debug.DrawRay(Enemy.transform.position, Enemy.transform.forward * 30, Color.yellow);
        //Debug.DrawRay(Enemy.transform.position, direction * 30, Color.green);
        if (Physics.Raycast(SearchPoint, _direction, out var hitInfo))
        {
            //Debug.Log("Hit! Object = " + hitInfo.collider.name);
            //Debug.Log(_direction.ToString());
            if (hitInfo.collider.gameObject.name == "Player")  //if (hitInfo.collider.name == "Player")
            {
                //Debug.Log("¬ижу игрока!");

                if (!_isDamage && !_isMoveToTheSide && !_isDead)
                {
                    if (_distance < _fireDistans)
                    {
                        Stop();
                        //Rotate();
                        //Direction = Enemy.transform.rotation;
                        //Direction = _direction.rotation;

                        // ==ќдно из двух!==
                        //Direction.eulerAngles = SearchPoint;  

                        _isRotate = true;
                        _isShoot = true;

                        if (_ammo > 0)
                        {
                            Invoke("Shoot2", _shootTime);
                        }
                        else
                        {
                            Stop();
                            Reloading();
                        }
                    }
                }
                    
            }
            else
            {
                // если не видит игрока
                //Debug.Log("Ќе вижу игрока!");
                if (_distance < _stopDistans)  // если игрок слишком близко
                {
                    _isRotate = true;
                }
                else
                { Move();}
                
                _timer = 0f;
            }
        }
    }

    public void Reloading()
    {

        //Stop();
        //_isMove = false;
        _isReloading = true;
        SoundController.Reload();

        //EnemyAnimator.SetBool("isMove", false);
        EnemyAnimator.SetTrigger("Reload");
        EnemyAnimator.SetBool("isReloading", true);
        //_ammo = _maxAmmo;
        //Invoke("Move", _moveTime); // _moveTime);  
        Invoke("EndReloading", 3f); // _moveTime);  
    }

    public void EndReloading()
    {
        if (!_isDamage)
        {
                _ammo = _maxAmmo;
                Invoke("Move", _moveTime); // _moveTime);  
        }

    }

        public void Stop()
    {
        _isMove = false;
        NavMeshAgent.speed = 0f;
        EnemyAnimator.SetFloat("y", 0f);
        EnemyAnimator.SetFloat("x", 0f);
        EnemyAnimator.SetBool("isMove", false);
        
        //Debug.Log("ќстановилс€ дл€ стрельбы");
    }

    public void Rotate()
    {
        //ѕоворот в сторону игрока
        EnemyAnimator.SetFloat("y", 0f);
        //¬ключить поворот 
        //EnemyAnimator.SetFloat("x", -1);
        // ¬ычисл€ем направление на игрока
        _rotateDirection = Player.transform.position - Enemy.transform.position;
        float Angle = Vector3.Angle(_rotateDirection, Enemy.transform.forward);
        _rotateDirection.y = 0; // ≈сли хотите игнорировать вертикальную ось
        // ¬ычисл€ем поворот к цели
        targetRotation = Quaternion.LookRotation(_rotateDirection);
        //        Debug.Log(_rotateDirection.normalized.ToString());  
        // ѕровер€ем, есть ли ненулевое направление

        PlaneDirection = new Plane(transform.right, transform.position);
        
        if (Quaternion.Angle(targetRotation, transform.rotation) > 0.1f)
        {
            if (Quaternion.Angle(targetRotation, transform.rotation) > 2f)  // включить анимацию поворота
            {
                if (PlaneDirection.GetSide(Player.transform.position))  // игрок находитс€ справа или слева от плоскости?
                {
                    EnemyAnimator.SetFloat("x", 1f);
                    //Debug.Log("ѕоворот направо");
                }
                else
                {
                    EnemyAnimator.SetFloat("x", -1f);
                    //Debug.Log("ѕоворот налево");
                }
            }
            else
            {
                EnemyAnimator.SetFloat("x", 0f);
            }


            //Debug.Log("”гол поворота > 0f:  " + Angle.ToString());
            //Debug.Log("»грок находитс€ на векторе:  " + _rotateDirection.ToString());

            //Quaternion RotateVector = targetRotation - transform.rotation;
            //Debug.Log("поворачиваю в сторону игрока на вектор:  " + targetRotation.ToString());

            // ѕлавно поворачиваем врага в сторону игрока
            Enemy.transform.rotation = Quaternion.Slerp(transform.rotation, targetRotation, Time.deltaTime * _enemyRotationSpeed);
            
            //Debug.Log("”гол до игрока:  " + Quaternion.Angle(targetRotation, transform.rotation).ToString());
        }
        
    }

    public bool CheckDirectionToTheSide() // направо=1, налево =-1
    {
        float LeftDistance = 0f;
        float RightDistance = 0f;
        try
        { 
            Physics.Raycast(SearchPoint + Enemy.transform.right * 0.5f, Enemy.transform.right + new Vector3(0f, 0.5f, 0f), out var hitInfoRight);
            Debug.Log(" оллайдер спарава " + hitInfoRight.transform.name.ToString());
            RightDistance = hitInfoRight.distance;

        }
        catch 
        {
            Debug.Log(" оллайдер спарава не найден");
            RightDistance = 10f;
        }
        try
        {
            Physics.Raycast(SearchPoint + Enemy.transform.right * -0.5f, Enemy.transform.right * -1 + new Vector3(0f, 0.5f, 0f), out var hitInfoLeft);
            Debug.Log(" оллайдер слева " + hitInfoLeft.transform.name.ToString());
            LeftDistance = hitInfoLeft.distance;
        }
        catch 
        {
            Debug.Log(" оллайдер слева не найден");
            LeftDistance = 10f;
        }

        if (RightDistance > 9f && LeftDistance > 9f)
        {
            float _random = Random.Range(-1f, 1f);
            Debug.Log("–андом равен: " + _random.ToString());
            if (_random > 0f)
            {
                LeftDistance = 0f;
            }
            else
            {
                RightDistance = 0f;
            }
        }

        if (RightDistance >= LeftDistance)
        {
            if (RightDistance > 2f)
            {
                MoveToTheSidePoint = Enemy.transform.position + Enemy.transform.right * 2;
                Debug.Log("»ду направо в точку: " + MoveToTheSidePoint.ToString() + " " + RightDistance.ToString());
                //Instance = Instantiate(Point, MoveToTheSidePoint, Point.transform.rotation);
                StepsToTheSide(1, 2);
                return true;
            }
            else
            {
                Debug.Log("Ќаправо = " + RightDistance.ToString());

            }
        }
        else
        {
            if (LeftDistance > 2f)
            {
                MoveToTheSidePoint = Enemy.transform.position + Enemy.transform.right * -2;
                Debug.Log("»ду налево в точку: " + MoveToTheSidePoint.ToString() + " " + LeftDistance.ToString());
                //Instance = Instantiate(Point, MoveToTheSidePoint, Point.transform.rotation);
                StepsToTheSide(-1, 2);
                return true;
            }
            else
            {
                Debug.Log("Ќалево = " + LeftDistance.ToString());

            }
        }

        return false;
    }

    public void StepsToTheSide(int Direction, int i) // Direction направо=1, налево =-1 // i - рассто€ние бокового отхода
    {
        // включение маневра-уклонени€
        if (Direction > 0)
        {
            Debug.Log("ќтход вправо");            
        }
        else
        {
            Debug.Log("ќтход влево");           
        }
        // ќтключить навигацию!!!
        NavMeshAgent.speed = 0f;

        _isMove = true;
        _isMoveToTheSide = true;
        _isRotate = false;
        _isReloading = false;
        _isShoot = false;

        EnemyAnimator.SetBool("isReloading", false);
        EnemyAnimator.SetBool("isMove", true);
        EnemyAnimator.SetFloat("y", 0f); // движение вперед отключено
        EnemyAnimator.SetFloat("x", Direction); // движение вбок включено        

        //nvoke("Move", _moveTime);
    }

    public void MoveToTheSide()  // выполнение маневра-уклонени€
    {   // если точка назначени€ не достигнута идем вбок
        _timerMoveToTheSide += Time.deltaTime;

        if ((Enemy.transform.position - MoveToTheSidePoint).magnitude > 0.5f && _timerMoveToTheSide < 2f)
        {
            Debug.Log("–ассто€ние до цели " + (Enemy.transform.position - MoveToTheSidePoint).magnitude.ToString());
            Enemy.transform.position = Vector3.Lerp(Enemy.transform.position, MoveToTheSidePoint, 1.5f * Time.deltaTime);
        }
        else
        {
            MoveToTheSideOff();
        }
        /*else
        {
            // если точка назначени€ достигнута стоп!
            Invoke("MoveToTheSideOff", 2f);

        }*/
        // если точка назначени€ достигнута стоп!
        //MoveToTheSideOff();

    }

    public void MoveToTheSideOff()
    {
        // если точка назначени€ достигнута стоп!
        _timer = _searchTime + 1;
        _isMove = true;
        _isMoveToTheSide = false;
        EnemyAnimator.SetFloat("x", 0f); // ѕоворот на месте отключен
        //Move();
    }

    

    public void Move()
    {
        _isMove = true;
        _isMoveToTheSide = false;
        _isReloading = false;
        _isShoot = false;

        EnemyAnimator.SetBool("isReloading", false);
        EnemyAnimator.SetBool("isMove", true);
        EnemyAnimator.SetFloat("x", 0f); // ѕоворот на месте отключен
        if (_distance > _stopDistans)   
        {
            EnemyAnimator.SetFloat("y", 1f);  // включен шаг, если надо идти
            NavMeshAgent.SetDestination(Player.transform.position);
            NavMeshAgent.speed = _enemySpeed;
        }        

        _timer = 0f;        

    }

    public void Damage()
    {
        Stop();

        _isDamage = true;
        _isMove = false;
        _isMoveToTheSide = false;
        _isRotate = false;
        _isShoot = false;
        _isReloading = false;
        
        Invoke("DamageOff", 1f);
    }

    public void DamageOff()
    {
        _isDamage = false;        
        if (CheckDirectionToTheSide())
        {
            _timerMoveToTheSide = 0f;
        }
        else
        {
            Debug.Log("ѕуть дл€ маневра уклонени€ не обнаружен!");
            Invoke("Move", _moveTime); 
        }
        
    }

    public void DeadShoot()
    {
        if (_ammo > 0)
        {
            _isRotate = false;
            _rifleDirection = FirePoint.position - RiflePoint.position;
            _shootDerection = Quaternion.LookRotation(_rifleDirection);

            _ammo -= 1;
//            EGA_EnemyLasers.ShootEnemy(Prefab, SearchPoint, _shootDerection);
            EGA_EnemyLasers.ShootEnemy(Prefab, FirePoint.position, _shootDerection);
            ShootSound.Play();
            Debug.Log("¬ыстрел мЄртвой руки!");

            if (Physics.Raycast(FirePoint.position, _rifleDirection, out var hitInfo))
            {
                //Debug.DrawRay(SearchPoint, _direction * 15, Color.red);
                if (hitInfo.collider.gameObject.name == "Player")
                {
                    // попал по игроку
                    if (hitInfo.collider.TryGetComponent(out PlayerHealthComponentNew healthComponent))
                    {
                        try
                        {
                            healthComponent.TakeDamage(10);
                        }
                        catch { }
                    }
                }
            }
        }
    }

    public void Shoot2()
    {
        if (!_isDamage && !_isMoveToTheSide && !_isDead)
        {
            if (_ammo > 0)
            {
                _isRotate = false;
                _rifleDirection = FirePoint.position - RiflePoint.position;
                _shootDerection = Quaternion.LookRotation(_rifleDirection);

                _ammo -= 1;
                //            EGA_EnemyLasers.ShootEnemy(Prefab, SearchPoint, _shootDerection);
                EGA_EnemyLasers.ShootEnemy(Prefab, FirePoint.position, _shootDerection);
                ShootSound.Play();
                //Debug.Log("¬ыстрел мЄртвой руки!");

                if (Physics.Raycast(FirePoint.position, _rifleDirection, out var hitInfo))
                {
                    //Debug.DrawRay(SearchPoint, _direction * 15, Color.red);
                    if (hitInfo.collider.gameObject.name == "Player")
                    {
                        // попал по игроку
                        if (hitInfo.collider.TryGetComponent(out PlayerHealthComponentNew healthComponent))
                        {
                            try
                            {
                                healthComponent.TakeDamage(10);
                            }
                            catch { }
                        }
                    }
                }
                if (!_isDead)
                {
                    if (_ammo <= 0)
                    {
                        Stop();
                        Reloading();
                    }
                    else
                    {
                        Invoke("Move", _moveTime);
                    }
                }
            }
        }
    }

    /*public void Shoot()
    {
        if (_ammo > 0)
        {
            _isRotate = false;
            //_shoot = true;
            //Debug.Log("¬ыстрел!");
            //_ammo -= 1;
            _targetDirection = Player.transform.position - Enemy.transform.position;

            // задаЄм отклонение вызова
            // и кидаем луч повторно
            _spreadVector.y = Random.Range((_bulletSpread * -1), _bulletSpread) / 3f;  // отклонение по вертикали меньше в 3 раза
            _spreadVector.z = Random.Range((_bulletSpread * -1), _bulletSpread);  // отклонение по горизонтали

            _targetDirection.y += _spreadVector.y;  // отклонение по вертикали
            _targetDirection.z += _spreadVector.z;  // отклонение по горизонтали               

            // проверка не сбит ли прицел :)
            if (_isDead | _isDamage)
            {
                // стрельба по направлению ствола оружи€
                _targetDirection = FirePoint.forward;
            }

            // преобразование Vector 3 в Quaternion!!!
            _shootDerection = Quaternion.LookRotation(_targetDirection);
            //Direction = _shootDerection;   //Quaternion.LookRotation(FirePoint.forward);        
            EnemyAnimator.SetTrigger("Shoot");
            _ammo -= 1;
            EGA_EnemyLasers.ShootEnemy(Prefab, SearchPoint, _shootDerection);
            ShootSound.Play();
            //EGA_EnemyLasers.ShootEnemy(Prefab, SearchPoint, Direction);

            //Destroy(Instance);
            //Instance = Instantiate(Prefab, SearchPoint, Direction);
            //Instance.transform.parent = transform;




            //if (Physics.Raycast(SearchPoint, _direction, out var hitInfo))
            if (Physics.Raycast(SearchPoint, _targetDirection, out var hitInfo))
            {
                //Debug.DrawRay(SearchPoint, _direction * 15, Color.red);
                if (hitInfo.collider.gameObject.name == "Player")
                {
                    // попал по игроку
                    //                Debug.Log("ѕопал по игроку!");
                    if (hitInfo.collider.TryGetComponent(out PlayerHealthComponentNew healthComponent))
                    {
                        try
                        {
                            //healthComponent.HitSound.Play();
                            healthComponent.TakeDamage(10);
                        }
                        catch { }
                    }

                }
                else
                {
                    // промазал по игроку
                    //                Debug.Log("ѕромазал по игроку!");
                }
            }
            if (!_isDead)
            {
                if (_ammo <= 0)
                {
                    Stop();
                    Reloading();
                }
                else
                {
                    Invoke("Move", _moveTime);
                }
            }

        }

    }*/

    //public void DestroyLaser()
    // {
    //    LaserScript.DisablePrepare();        
    // }

}
